k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-mindjunkies-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/hsts: "true"
    nginx.ingress.kubernetes.io/hsts-max-age: "31536000"
    nginx.ingress.kubernetes.io/hsts-include-subdomains: "true"
    nginx.ingress.kubernetes.io/hsts-preload: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mindjunkies.tech
    http:
      paths:
      - path: /.well-known/acme-challenge/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: django-mindjunkies-web-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-mindjunkies-web-service
            port:
              number: 80
  tls:
  - hosts:
    - mindjunkies.tech
    secretName: mindjunkies-tech-tls
